# kuru-sdk-py-old

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: secrets-scan.yml
examples/: deposit.py  get_order_by_cloid.py  place_limit_buy.py  place_order.py  simple_market_maker.py  view_orderbook.py  ws_place_order.py
kuru_sdk/: __init__.py  client_order_executor.py  config.py  margin.py  orderbook.py  token.py  utils.py  websocket_handler.py
